key/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    api: api
spec:
  replicas: 2
  selector:
    matchLabels:
      api: api
  template:
    metadata:
      labels:
        api: api
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: api   
          image: eugenchornogorskiy/product-backend:v4
          resources:
            limits:
              cpu: "1000m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - mountPath: /app/app.config.json
              name: app-config
              subPath: app.config.json
          livenessProbe: 
            exec:
              command:
                - wget
                - -qO-
                - http://localhost:3000/health
            failureThreshold: 5
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
      volumes:
        - name: app-config
          configMap:
            items:
              - key: app.config.json
                path: app.config.json
            name: app-config
