key/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  selector:
    nginx: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
