key/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    redis: redis
  ports:
    - protocol: TCP
      port: 6379
      targetPort: 6379
