key/api-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-network-policy
spec:
  podSelector:
    matchLabels: 
      api: api
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              nginx: nginx
      ports:
        - protocol: TCP
          port: 3000
    - from:
        - podSelector:
            matchLabels:
              auth: authentik
      ports:
        - protocol: TCP
          port: 3000
  egress:
    - to:
        - podSelector:
            matchLabels:
              postgres: postgres
      ports:
        - protocol: TCP
          port: 5432 
    - to:
        - podSelector:
            matchLabels:
              auth: authentik 
      ports:
        - protocol: TCP
          port: 9000
