key/authorization-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: auth-network-policy
spec:
  podSelector:
    matchLabels:
      auth: authentik
  policyTypes: 
    - Egress 
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              api: api 
      ports:
        - protocol: TCP
          port: 9000
  egress:
    - to:
      - podSelector:
          matchLabels:
            auth-postgres: auth-postgres   
      ports: 
        - protocol: TCP
          port: 5432 
    - to:
      - podSelector:
          matchLabels:
            redis: redis 
      ports: 
        - protocol: TCP
          port: 6379
