key/redis-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
spec:
  podSelector:
    matchLabels:
      redis: redis
  policyTypes:
    - Ingress  
  ingress:
    - from: 
      - podSelector:
          matchLabels:
            api: api
      - podSelector:
          matchLabels:
            auth: authentik
      ports:
        - protocol: TCP
          port: 6379
